--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
 
         <section id="main_content">
           <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="welcome-to-github-pages" class="center" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>A Simple Theme Created by AppleNick</h3>
 
 <h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
+          <h1>This Page has no real purpose...</h1>
         </section>
 
         <footer>
